--- a/src/Counter.css
+++ b/src/Counter.css
@@ -7,7 +7,7 @@
      font-size: 70px;
      background-color:transparent;
     color: black;
-    border-style: inset;
+   
     max-width:1300px;
     max-height: 1000px;
     
@@ -63,10 +63,11 @@
  }
  .dec
  {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,92,1) 35%, rgba(0,212,255,1) 100%);
+   background-color: rgb(53,94,163);
+    color: white;
    border-style: none;
-    border-radius: 50%;
+    border-radius: 20%;
+    font-size: 100px;
     margin-left: 400px;
     width: 150px; /* Increase the width and height to create larger circles */
     height: 150px;
@@ -75,11 +76,11 @@
  
  .inc
  {
-    background-color:white;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,92,1) 35%, rgba(0,212,255,1) 100%);
+   background-color: rgb(53,94,163);
+    color: white;
+    font-size: 100px;
     border-style: none;
-  border-radius: 50%;
+  border-radius: 20%;
   width: 150px; /* Increase the width and height to create larger circles */
     height: 150px;
     
